[metadata]
name = megabeast
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.1.dev
author = Karl Gordon and BEAST Team
author_email = kgordon@stsci.edu
description = Hierarchical Bayesian Model for Ensembles of BEAST results
long_description = Hierarchical Bayesian Model of Ensembles of Dust Extinguished Stellar Populations
license = BSD 3-Clause
url = http://megabeast.readthedocs.io
edit_on_github = False
github_project = BEAST-Fitting/megabeast
python_requires = ">=3.5"

[options]
# install_requires should be formatted as a semicolon-separated list, e.g.:
# install_requires = astropy; scipy; matplotlib
install_requires = astropy; scipy; matplotlib; tqdm; h5py
zip_safe = False
use_2to3 = False

[options.entry_points]
console_scripts =

    # astropy-package-template-example = packagename.example_mod:main


[options.package_data]
* = *.c
megabeast = data/*
megabeast.tests = coveragerc

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrapignore = E203, E501, W503]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
ignore = E203, E501, W503

[pycodestyle]
exclignore = E203, E501, W503ude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
ignore = E203, E501, W503
