[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py
ignore = E203, E501, W503

[pycodestyle]
exclude = extern,sphinx,*parsetab.py
ignore = E203, E501, W503

[metadata]
package_name = megabeast
description = Hierarchical Bayesian Model for Ensembles of BEAST results
long_description = Hierarchical Bayesian Model of Ensembles of Dust Extinguished Stellar Populations
author = Karl Gordon and BEAST Team
author_email = kgordon@stsci.edu
license = BSD 3-Clause
url = http://megabeast.readthedocs.io
edit_on_github = False
github_project = BEAST-Fitting/megabeast
# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = astropy, scipy, matplotlib
install_requires = astropy
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.1.dev
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.5

[entry_points]

# astropy-package-template-example = packagename.example_mod:main
