[metadata]
name = megabeast
author = Karl Gordon and BEAST Team
author_email = kgordon@stsci.edu
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = http://megabeast.readthedocs.io
description = Hierarchical Bayesian Model for Ensembles of BEAST results
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = BEAST-Fitting/megabeast

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    scipy
    astropy
    matplotlib
    aplpy
    h5py
    tqdm
    beast@git+https://github.com/BEAST-Fitting/beast.git@master#egg=beast

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
megabeast = data/*, examples/*.txt

[tool:pytest]
testpaths = "megabeast" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    megabeast/_astropy_init*
    megabeast/conftest.py
    megabeast/*setup_package*
    megabeast/tests/*
    megabeast/*/tests/*
    megabeast/extern/*
    megabeast/version*
    */megabeast/_astropy_init*
    */megabeast/conftest.py
    */megabeast/*setup_package*
    */megabeast/tests/*
    */megabeast/*/tests/*
    */megabeast/extern/*
    */megabeast/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
ignore = E203, E501, W503

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
ignore = E203, E501, W503
